--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
+    "bcrypt": "^5.1.1",
+    "busboy": "^1.6.0",
+    "date-fns": "^4.1.0",
+    "formidable": "^3.5.1",
+    "framer-motion": "^11.8.0",
+    "jose": "^5.9.3",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
+    "next": "14.2.13",
+    "next-connect": "^1.0.0",
+    "raw-body": "^3.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
